test/grammar/schema/var_not_define_fail/var_not_define_fail_1/stderr.golden
error[E2L23]: CompileError
 --> ${CWD}/main.k:8:9
  |
8 |         regex.match(image, "^[a-zA-Z]+:\d+\.\d+\.\d+$"), "image name should be like 'nginx:1.14.2'"
  |         ^ name 'regex' is not defined
  |